Change theme and fix line break in test specifications

--- a/web/src/assets/scss/specmate.extensions.scss
+++ b/web/src/assets/scss/specmate.extensions.scss
@@ -164,7 +164,7 @@ textarea:focus,
 }
 
 .nav-tabs .nav-link {
-    color: $secondary;
+    color: $primary;
 }
 
 .nav-tabs .nav-link.active {
